--- a/public/index.html
+++ b/public/index.html
@@ -588,8 +588,8 @@
     // Radio máximo para buscar carreteras (metros)
     maxSearchRadius: 5000,
     // URLs de los servicios
-    backendUrl: "https://tu-backend.onrender.com/api",
-    socketServer: "https://tu-websocket.onrender.com"
+    backendUrl: "https://backend-service-6ang.onrender.com/api",
+    socketServer: "https://websocket-service-i32d.onrender.com"
   };
   
   // Configuración para seguimiento
