--- a/public/seguimiento.html
+++ b/public/seguimiento.html
@@ -259,8 +259,8 @@
     
     // Configuración (¡Actualizar con tus URLs!)
     const config = {
-      backendUrl: "https://tu-backend.onrender.com/api",
-      socketServer: "https://tu-websocket.onrender.com",
+      backendUrl: "https://backend-service-6ang.onrender.com/api",
+      socketServer: "https://websocket-service-i32d.onrender.com",
       puntoVenta: { lat: 22.401355, lng: -79.970718 }
     };
     
